--- a/user-history-service/package.json
+++ b/user-history-service/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "pg": "^8.11.3",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "uuid": "^9.0.1"
   }
 }
