--- a/user-history-service/package.json
+++ b/user-history-service/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "dotenv": "^16.3.1",
+    "ioredis": "^5.3.2",
     "pg": "^8.11.3",
     "prettier": "^3.0.3",
     "typeorm": "^0.3.17",
