--- a/user-management-service/package.json
+++ b/user-management-service/package.json
@@ -17,7 +17,10 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm:cli": "typeorm-ts-node-commonjs -d src/db/data-source.ts",
+    "migration:run": "npm run typeorm:cli -- migration:run",
+    "migration:generate": "npm run typeorm:cli -- migration:generate src/migrations/create"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
