--- a/user-history-service/.env.example
+++ b/user-history-service/.env.example
@@ -4,6 +4,6 @@ POSTGRES_PORT=5432
 REDIS_PORT=6379
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=pg
-POSTGRES_DATABASE=test_db
+POSTGRES_DB=test_db
 MODE=DEV
 RUN_MIGRATIONS=true
