--- a/user-history-service/package.json
+++ b/user-history-service/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node src/index.js",
     "start:debug": "nodemon --inspect src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "typeorm:cli": "typeorm -d src/db/data-source.js",
+    "migration:run": "npm run typeorm:cli -- migration:run",
+    "migration:generate": "npm run typeorm:cli -- migration:generate -o src/migrations/create"
   },
   "type": "module",
   "keywords": [],
