--- a/user-management-service/package.json
+++ b/user-management-service/package.json
@@ -9,6 +9,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start -e 'node -r dotenv/config' -- dotenv_config_path=../.env",
+    "start:standalone": "nest start -e 'node -r dotenv/config'",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
